upgraded plugin/tooling builds to JDK17